--- a/Did I/res/layout/main.xml
+++ b/Did I/res/layout/main.xml
@@ -3,4 +3,12 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main" />
+    tools:context=".Main" >
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextVeeeew" />
+
+</FrameLayout>
