--- a/Did I/res/layout/activity_main.xml
+++ b/Did I/res/layout/activity_main.xml
@@ -3,6 +3,4 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main" >
-
-</FrameLayout>
+    tools:context=".MainActivity" />
