Playing with interface. Started commenting code to avoid co-programmer rage.

--- a/Did I/res/values/colors.xml
+++ b/Did I/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="neutral">#CFCFCF</color>
     <color name="positive">#9EF59E</color>
     <color name="negative">#FF8080</color>
+    <color name="indicator_selected">#616161</color>
 </resources>
