--- a/Did I/res/layout/fragment_habits.xml
+++ b/Did I/res/layout/fragment_habits.xml
@@ -3,54 +3,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <!-- Indicator layout -->
+    
     <LinearLayout
         android:id="@+id/linear_layout_indicators"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/indicator_margin_top"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/image_view_indicator_1"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="@dimen/indicator_size"
+            android:layout_height="@dimen/indicator_size"
+            android:layout_marginLeft="@dimen/indicator_spacing"
+            android:src="@drawable/indicator_neutral_selected" />
+
+        <ImageView
+            android:id="@+id/image_view_indicator_2"
+            android:layout_width="@dimen/indicator_size"
+            android:layout_height="@dimen/indicator_size"
+            android:layout_marginLeft="@dimen/indicator_spacing"
+            android:src="@drawable/indicator_neutral" />
+
+        <ImageView
+            android:id="@+id/image_view_indicator_3"
+            android:layout_width="@dimen/indicator_size"
+            android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="8dp"
             android:src="@drawable/indicator_neutral" />
 
         <ImageView
-            android:id="@+id/image_view_indicator_2"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
-            android:src="@drawable/indicator_negative"
-            android:visibility="gone" />
-
-        <ImageView
-            android:id="@+id/image_view_indicator_3"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
-            android:src="@drawable/indicator_negative"
-            android:visibility="gone" />
-
-        <ImageView
             android:id="@+id/image_view_indicator_4"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
-            android:src="@drawable/indicator_positive"
-            android:visibility="gone" />
+            android:layout_width="@dimen/indicator_size"
+            android:layout_height="@dimen/indicator_size"
+            android:layout_marginLeft="@dimen/indicator_spacing"
+            android:src="@drawable/indicator_neutral" />
 
         <ImageView
             android:id="@+id/image_view_indicator_5"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="8dp"
-            android:src="@drawable/indicator_positive"
-            android:visibility="gone" />
+            android:layout_width="@dimen/indicator_size"
+            android:layout_height="@dimen/indicator_size"
+            android:layout_marginLeft="@dimen/indicator_spacing"
+            android:src="@drawable/indicator_neutral" />
     </LinearLayout>
 
+    
+    <!-- Question layout -->
     <RelativeLayout
         android:id="@+id/relative_layout_question"
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
         android:gravity="center_horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/text_view_did_i"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -67,15 +67,14 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
-            android:id="@+id/button1"
+            android:id="@+id/text_view_habit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView1"
+            android:layout_alignBaseline="@id/text_view_did_i"
+            android:layout_alignBottom="@id/text_view_did_i"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="2dp"
-            android:layout_alignBottom="@+id/textView1"
-            android:layout_toRightOf="@+id/textView1"
-            android:hint="@string/add_a_habit"
+            android:layout_toRightOf="@id/text_view_did_i"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
 
@@ -83,14 +82,14 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/button1"
-            android:layout_alignBottom="@+id/button1"
-            android:layout_toRightOf="@+id/button1"
+            android:layout_alignBaseline="@id/text_view_habit"
+            android:layout_alignBottom="@id/text_view_habit"
+            android:layout_toRightOf="@id/text_view_habit"
             android:text="@string/question_mark"
             android:textAppearance="?android:attr/textAppearanceLarge" />
-
     </RelativeLayout>
 
+    <!-- Yes/No button layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -101,23 +100,23 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button_yes"
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_marginRight="8dp"
             android:layout_weight="1.0"
             android:background="@drawable/btn_positive_holo_light"
-            android:text="Yes"
+            android:text="@string/yes"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button_no"
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_marginLeft="8dp"
             android:layout_weight="1.0"
             android:background="@drawable/btn_negative_holo_light"
-            android:text="No"
+            android:text="@string/no"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
 
