--- a/Did I/res/layout/fragment_progress.xml
+++ b/Did I/res/layout/fragment_progress.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <LinearLayout
-        android:id="@+id/linear_layout_indicators"
+        android:id="@+id/linear_layout_progress_indicators"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/indicator_margin_top"
@@ -12,35 +12,35 @@
         android:orientation="horizontal" >
 
         <ImageView
-            android:id="@+id/image_view_indicator_1"
+            android:id="@+id/image_view_progress_indicator_1"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
             android:src="@drawable/indicator_neutral_selected" />
 
         <ImageView
-            android:id="@+id/image_view_indicator_2"
+            android:id="@+id/image_view_progress_indicator_2"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
             android:src="@drawable/indicator_neutral" />
 
        <ImageView
-            android:id="@+id/image_view_indicator_3"
+            android:id="@+id/image_view_progress_indicator_3"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
             android:src="@drawable/indicator_neutral" />
 
        <ImageView
-            android:id="@+id/image_view_indicator_4"
+            android:id="@+id/image_view_progress_indicator_4"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
             android:src="@drawable/indicator_neutral" />
 
         <ImageView
-            android:id="@+id/image_view_indicator_5"
+            android:id="@+id/image_view_progress_indicator_5"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
@@ -48,73 +48,41 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/relative_layout_question"
+        android:id="@+id/relative_layout_progress_question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/text_view_progress_did_i"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             android:text="@string/did_i"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
-            android:id="@+id/button1"
+            android:id="@+id/text_view_progress_habit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView1"
+            android:layout_alignBaseline="@id/text_view_progress_did_i"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="2dp"
-            android:layout_alignBottom="@+id/textView1"
-            android:layout_toRightOf="@+id/textView1"
-            android:hint="@string/add_a_habit"
+            android:layout_alignBottom="@id/text_view_progress_did_i"
+            android:layout_toRightOf="@id/text_view_progress_did_i"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/button1"
-            android:layout_alignBottom="@+id/button1"
-            android:layout_toRightOf="@+id/button1"
+            android:layout_alignBaseline="@id/text_view_progress_habit"
+            android:layout_alignBottom="@id/text_view_progress_habit"
+            android:layout_toRightOf="@id/text_view_progress_habit"
             android:text="@string/question_mark"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/relative_layout_question"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="100dp"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1.0"
-            android:background="@drawable/btn_positive_holo_light"
-            android:text="Yes"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1.0"
-            android:background="@drawable/btn_negative_holo_light"
-            android:text="No"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
 
 </RelativeLayout>
