--- a/Did I/res/values/colors.xml
+++ b/Did I/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="neutral">#CFCFCF</color>
+    <color name="positive1">#54FF57</color>
     <color name="positive">#9EF59E</color>
     <color name="negative">#FF8080</color>
+    <color name="negative1">#FF5454</color>
     <color name="indicator_selected">#616161</color>
+
 </resources>
