Dynamically loading habits step one.

--- a/Did I/res/layout/fragment_habits.xml
+++ b/Did I/res/layout/fragment_habits.xml
@@ -18,35 +18,40 @@
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
-            android:src="@drawable/indicator_neutral_selected" />
+            android:src="@drawable/indicator_neutral_selected"
+            android:visibility="false"/>
 
         <ImageView
             android:id="@+id/image_view_indicator_2"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
-            android:src="@drawable/indicator_neutral" />
+            android:src="@drawable/indicator_neutral"
+            android:visibility="false"/>
 
         <ImageView
             android:id="@+id/image_view_indicator_3"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
-            android:src="@drawable/indicator_neutral" />
+            android:src="@drawable/indicator_neutral"
+            android:visibility="false"/>
 
         <ImageView
             android:id="@+id/image_view_indicator_4"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
-            android:src="@drawable/indicator_neutral" />
+            android:src="@drawable/indicator_neutral"
+            android:visibility="false"/>
 
         <ImageView
             android:id="@+id/image_view_indicator_5"
             android:layout_width="@dimen/indicator_size"
             android:layout_height="@dimen/indicator_size"
             android:layout_marginLeft="@dimen/indicator_spacing"
-            android:src="@drawable/indicator_neutral" />
+            android:src="@drawable/indicator_neutral"
+            android:visibility="false"/>
     </LinearLayout>
 
     
