--- a/Did I/res/layout/edit_habits.xml
+++ b/Did I/res/layout/edit_habits.xml
@@ -6,21 +6,19 @@
 
     <!-- Introduction -->
     <TextView
-        android:layout_marginTop="@dimen/item_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/edit_introduction"
         android:textSize="@dimen/text_xlarge"
-        android:layout_marginLeft="@dimen/margin_side"
-        android:layout_marginRight="@dimen/margin_side"/>
+		android:layout_margin="@dimen/margin_side"/>
     
     <!-- List with habits -->
 	<ListView
 	    android:id="@android:id/list"
-	    android:layout_marginTop="@dimen/item_height"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_marginLeft="@dimen/margin_side"
-	    android:layout_marginRight="@dimen/margin_side"></ListView>
+	    android:layout_marginRight="@dimen/margin_side"
+	    android:layout_marginBottom="@dimen/margin_side"/>
 
 </LinearLayout>
