--- a/Did I/res/menu/main.xml
+++ b/Did I/res/menu/main.xml
@@ -1,6 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@drawable/ic_action_settings"
+        android:orderInCategory="0"
+        android:showAsAction="always" />
+    
 </menu>
