--- a/Did I/res/layout/list_item_habit.xml
+++ b/Did I/res/layout/list_item_habit.xml
@@ -25,7 +25,7 @@
 
     <!-- Edit text for adding habit -->
 
-    <EditText
+    <si.modrajagoda.didi.CustomEditText
         android:id="@+id/habit_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
