--- a/Did I/res/layout/dialog_edit.xml
+++ b/Did I/res/layout/dialog_edit.xml
@@ -3,5 +3,5 @@
     android:id="@+id/text"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:inputType="text"
+    android:inputType="textCapSentences"
     android:hint="@string/enter_habit"/>
